# Silo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/core/: config.py
src/data/: finance_policy.md
src/database/: qdrant.py
src/ingestion/: chunker.py  embedder.py  metadata.py  parser.py  pipeline.py
src/scripts/: init_qdrant.py  seed_data.py  test_retrieval.py
