[project]
name = "silo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.82.0",
    "langchain>=1.2.13",
    "langchain-text-splitters>=0.3.6",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "einops>=0.8.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
]
